force-app/main/default/objects/Account/fields/Segmentacao_Especifica_Tecon_Salvador__c.field-meta.xml
<CustomField>
    <fullName>Segmentacao_Especifica_Tecon_Salvador__c</fullName>
    <label>Segmentação Específica Tecon Salvador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agente de Carga</fullName>
            </value>
            <value>
                <fullName>Armador</fullName>
            </value>
            <value>
                <fullName>Armador Break Bulk</fullName>
            </value>
            <value>
                <fullName>Cabotagem</fullName>
            </value>
            <value>
                <fullName>Comissaria de Despacho</fullName>
            </value>
            <value>
                <fullName>Exportador</fullName>
            </value>
            <value>
                <fullName>Importador</fullName>
            </value>
            <value>
                <fullName>Transportadora</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>