force-app/main/default/objects/Account/fields/Segmentacao_Pricing_Tecon_Rio_Grande__c.field-meta.xml
<CustomField>
    <fullName>Segmentacao_Pricing_Tecon_Rio_Grande__c</fullName>
    <label>Segmentação Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agente de Carga</fullName>
            </value>
            <value>
                <fullName>Cargas Diferenciadas (NCC e Cargas de Projeto)</fullName>
            </value>
            <value>
                <fullName>Cliente a Desenvolver</fullName>
            </value>
            <value>
                <fullName>Cliente Grande</fullName>
            </value>
            <value>
                <fullName>Cliente Pequeno</fullName>
            </value>
            <value>
                <fullName>Despachante</fullName>
            </value>
            <value>
                <fullName>NVOCC</fullName>
            </value>
            <value>
                <fullName>Transportadora</fullName>
            </value>
            <value>
                <fullName>Key Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>