force-app/main/default/objects/Account/fields/Solicitante_desbloqueio__c.field-meta.xml
<CustomField>
    <fullName>Solicitante_desbloqueio__c</fullName>
    <label>Solicitante desbloqueio</label>
    <length>80</length>
    <type>Text</type>
</CustomField>