force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativa</fullName>
            </value>
            <value>
                <fullName>Duplicada</fullName>
            </value>
            <value>
                <fullName>Inativa</fullName>
            </value>
            <value>
                <fullName>Nova</fullName>
                <default>true</default>
                <label>Nova</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>