force-app/main/default/objects/Account/fields/Teste__c.field-meta.xml
<CustomField>
    <fullName>Teste__c</fullName>
    <description>Campo texto de teste da Account para WilsonSons Service.</description>
    <label>Teste</label>
    <length>255</length>
    <type>Text</type>
</CustomField>