force-app/main/default/objects/Account/fields/Tipo_Cliente_Tecon_Rio_Grande__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cliente_Tecon_Rio_Grande__c</fullName>
    <inlineHelpText>Para selecionar mais de uma opção utilizar a tecla ctrl</inlineHelpText>
    <label>Tipo de Cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Armador</fullName>
            </value>
            <value>
                <fullName>Cabotagem</fullName>
            </value>
            <value>
                <fullName>Exportador</fullName>
            </value>
            <value>
                <fullName>Importador</fullName>
            </value>
            <value>
                <fullName>Parceiro Estratégico</fullName>
            </value>
            <value>
                <fullName>Parceiro Institucional</fullName>
            </value>
            <value>
                <fullName>Transportadora</fullName>
            </value>
            <value>
                <fullName>Despachante</fullName>
            </value>
            <value>
                <fullName>Cliente Reefer</fullName>
            </value>
            <value>
                <fullName>Cliente Armexp</fullName>
            </value>
            <value>
                <fullName>Cliente Armimp</fullName>
            </value>
            <value>
                <fullName>Exportador, Importador</fullName>
                <isActive>false</isActive>
                <label>Exportador, Importador</label>
            </value>
            <value>
                <fullName>Exportador, Importador, Cabotagem</fullName>
                <isActive>false</isActive>
                <label>Exportador, Importador, Cabotagem</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>