force-app/main/default/objects/Account/fields/TipoFuncionalConta__c.field-meta.xml
<CustomField>
    <fullName>TipoFuncionalConta__c</fullName>
    <description>Define se a conta e Grupo Economico ou Conta Unidade Operacional.</description>
    <label>Tipo Funcional de Conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grupo Econômico</fullName>
            </value>
            <value>
                <fullName>Conta Unidade Operacional</fullName>
                <default>true</default>
                <label>Conta Unidade Operacional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>