force-app/main/default/objects/Account/fields/Ultima_Atividade__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Atividade__c</fullName>
    <description>Ultima atividade CX</description>
    <label>Última Atividade CX</label>
    <type>Date</type>
</CustomField>