force-app/main/default/objects/Account/fields/UNs_Faturadas__c.field-meta.xml
<CustomField>
    <fullName>UNs_Faturadas__c</fullName>
    <description>Input dado pelo financeiro</description>
    <label>UNs Faturadas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AreasNegocio</valueSetName>
    </valueSet>
</CustomField>