force-app/main/default/objects/Account/fields/Usuario_SW__c.field-meta.xml
<CustomField>
    <fullName>Usuario_SW__c</fullName>
    <label>Usuário WS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>