force-app/main/default/objects/Account/validationRules/Bloqueio_Endereco.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueio_Endereco</fullName>
    <active>true</active>
    <errorConditionFormula>Bloqueado__c &amp;&amp;
TEXT(Status__c) == &quot;Ativa&quot; 
&amp;&amp; ISCHANGED(BillingAddress)
&amp;&amp; $Profile.Id != &quot;00e1N000001ixhp&quot;</errorConditionFormula>
    <errorDisplayField>BillingStreet</errorDisplayField>
    <errorMessage>Endereço de uma conta ativa só pode ser alterada após aprovação!</errorMessage>
</ValidationRule>