force-app/main/default/objects/Account/validationRules/Bloqueio_nome.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueio_nome</fullName>
    <active>true</active>
    <errorConditionFormula>Bloqueado__c &amp;&amp;
TEXT(Status__c) == &quot;Ativa&quot; 
&amp;&amp; ISCHANGED(Name)
&amp;&amp;  $Profile.Id != &quot;00e1N000001ixhp&quot;</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Nome de uma conta ativa só pode ser alterado após aprovação</errorMessage>
</ValidationRule>