force-app/main/default/objects/Account/validationRules/Bloqueio_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueio_Parent</fullName>
    <active>true</active>
    <errorConditionFormula>Bloqueado__c &amp;&amp;
TEXT(Status__c) == &quot;Ativa&quot; 
&amp;&amp; ISCHANGED(ParentId)
&amp;&amp; $Profile.Id != &quot;00e1N000001ixhp&quot;</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Parent de uma conta ativa só pode ser alterada após aprovação!</errorMessage>
</ValidationRule>