force-app/main/default/objects/Account/validationRules/Bloqueio_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueio_status</fullName>
    <active>true</active>
    <errorConditionFormula>Bloqueado__c &amp;&amp;
TEXT(PRIORVALUE(Status__c)) == &quot;Ativa&quot; 
&amp;&amp; ISCHANGED(Status__c)
&amp;&amp; $Profile.Id != &quot;00e1N000001ixhp&quot;</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status de uma conta ativa só pode ser alterado após aprovação</errorMessage>
</ValidationRule>