force-app/main/default/objects/Account/validationRules/Campo_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Campo_Status</fullName>
    <active>true</active>
    <description>Somente usuário PowerUser, Gestor ou Administrador possuem permissão de criar/alterar Conta com status diferente de Nova.</description>
    <errorConditionFormula>IF(
$Profile.Name == &quot;Vendedor&quot; &amp;&amp; ((ISCHANGED(Status__c))||(ISNEW()&amp;&amp; TEXT(Status__c) != &quot;Nova&quot;)), TRUE , FALSE
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Somente usuário PowerUser, Gestor ou Administrador possuem permissão de criar/alterar Conta com status diferente de Nova.</errorMessage>
</ValidationRule>