force-app/main/default/objects/Account/validationRules/DominiosEmail_apenas_conta_principal.validationRule-meta.xml
<ValidationRule>
    <fullName>DominiosEmail_apenas_conta_principal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(DominiosEmail__c)),
NOT(ISBLANK(ParentId))
)</errorConditionFormula>
    <errorDisplayField>DominiosEmail__c</errorDisplayField>
    <errorMessage>Preencha Domínio E-mail apenas na conta principal da hierarquia ou no Grupo Econômico.</errorMessage>
</ValidationRule>