force-app/main/default/objects/Account/validationRules/Towage_tugsys_commercial_group.validationRule-meta.xml
<ValidationRule>
    <fullName>Towage_tugsys_commercial_group</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Segmentacao_Especifica_Rebocadores__c, &quot;Broker&quot;)) &amp;&amp; TEXT($User.Area_Negocio__c) == &quot;Rebocadores&quot; &amp;&amp;  ISNULL(Id_Tugsys_Commercial_Group__c)</errorConditionFormula>
    <errorDisplayField>Id_Tugsys_Commercial_Group__c</errorDisplayField>
    <errorMessage>Id Tugsys Commercial Group is required</errorMessage>
</ValidationRule>