force-app/main/default/objects/Account/validationRules/Type_Obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Obrigatorio</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Type) == null</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Tipo é obrigatório</errorMessage>
</ValidationRule>