force-app/main/default/objects/Account/validationRules/UN_obrigatoria_Agencia.validationRule-meta.xml
<ValidationRule>
    <fullName>UN_obrigatoria_Agencia</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Area_de_Negocio__c) &amp;&amp; TEXT($User.Area_Negocio__c) == &quot;Agência&quot;</errorConditionFormula>
    <errorDisplayField>Area_de_Negocio__c</errorDisplayField>
    <errorMessage>Área de Negócio deve ser informada na conta!</errorMessage>
</ValidationRule>