force-app/main/default/objects/Account/validationRules/Valida_grupo_economico.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_grupo_economico</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Type) == &quot;Grupo_Economico&quot; &amp;&amp; (!ISBLANK(ParentId))</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Conta do tipo grupo econômico não pode ter Conta Pai</errorMessage>
</ValidationRule>