force-app/main/default/objects/Account/validationRules/Valida_unidade_operacional.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_unidade_operacional</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Type) == &quot;Unidade Operacional&quot; &amp;&amp;
ISBLANK(ParentId)</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Para Contas do tipo unidade operacional deve ser informada a Conta Pai</errorMessage>
</ValidationRule>