force-app/main/default/objects/Account/validationRules/Valida_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_URL</fullName>
    <active>false</active>
    <errorConditionFormula>if(REGEX( Website ,&quot;^((http|https)://)??(www[.])??([a-zA-Z0-9]|-)+?([.][a-zA-Z0-9(-|/|=|?)??]+?)+?$&quot;),false,true)</errorConditionFormula>
    <errorDisplayField>Website</errorDisplayField>
    <errorMessage>Website inválido</errorMessage>
</ValidationRule>