force-app/main/default/objects/Account/listViews/Contas_TCRG.listView-meta.xml
<ListView>
    <fullName>Contas_TCRG</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gerente_Conta_Tecon_Rio_Grande__c</field>
        <operation>contains</operation>
        <value>Daiana Valin,Débora Barboza,Rodrigo Brunetto,Rodrigo Velho,Thiago Novais,Vinicius Barros,Osvaldo Prestes</value>
    </filters>
    <label>Contas TCRG</label>
    <sharedTo>
        <group>Sales_team_tecon_rio_grande</group>
        <group>Tecon_Rio_Grande</group>
    </sharedTo>
</ListView>